--- a/src/GUI/fTraHang_Kho.form
+++ b/src/GUI/fTraHang_Kho.form
@@ -139,6 +139,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableLoMouseClicked"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTableLoKeyTyped"/>
               </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTable()"/>
@@ -180,7 +181,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="TH&#xd4;NG TIN S&#x1ea2;N PH&#x1ea8;M TRONG KHO"/>
+            <Property name="text" type="java.lang.String" value="CH&#x1ecc;N S&#x1ea2;N PH&#x1ea8;M"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldTimKiem">
