--- a/src/GUI/fHome.form
+++ b/src/GUI/fHome.form
@@ -627,9 +627,10 @@
                       <Font name="Tahoma" size="14" style="1"/>
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="2">
+                      <StringArray count="3">
                         <StringItem index="0" value="-- &#x110;&#x1ecb;a &#x110;i&#x1ec3;m --"/>
                         <StringItem index="1" value="- Khu v&#x1ef1;c -"/>
+                        <StringItem index="2" value="- Th&#xea;m khu v&#x1ef1;c -"/>
                       </StringArray>
                     </Property>
                   </Properties>
